--- a/TPLaComandaApp/src/app/pages/login/login.page.scss
+++ b/TPLaComandaApp/src/app/pages/login/login.page.scss
@@ -18,7 +18,7 @@ ion-content{
 }
 
   ion-item.inputForm{
-    --background: rgba(var(--ion-color-warning-rgb), 0.86);
+    --background: rgb(45, 87, 36);
     --padding-bottom: 2px;
     --border-radius: 0px;
     ion-label {
@@ -27,7 +27,7 @@ ion-content{
         font-size: 1rem!important;
     }
     ion-input {
-        --color: rgb(48, 107, 0);
+        --color: #fff;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-weight: bolder;
         font-size: x-large;
