Mozo confirma pedido, los sectores correspondientes realizan los pedidos, mozo entrega los pedidos

--- a/TPLaComandaApp/src/app/pages/home/home.page.html
+++ b/TPLaComandaApp/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      <strong>Hola xxxx.</strong><br>
+      <strong>Hola {{homeService.nombre}}.</strong><br>
       ¿Qué querés hacer?
     </ion-title>
     <ion-buttons slot="end">
