Se agrega boton volver en header

--- a/TPLaComandaApp/src/app/pages/scanner-solicitar-mesa/scanner-solicitar-mesa.page.html
+++ b/TPLaComandaApp/src/app/pages/scanner-solicitar-mesa/scanner-solicitar-mesa.page.html
@@ -1,6 +1,9 @@
   <ion-header>
   <ion-toolbar>
-    <ion-title class="ion-text-center" color="primary">Solicitud de Mesa</ion-title>
+    <ion-row class="ion-align-items-center">
+      <ion-icon (click)="Volver()" name="arrow-back-circle-outline" size="large" color="primary" slot=""></ion-icon>
+      <h4 class="titulo" color="primary">SOLICITUD DE MESA</h4>      
+    </ion-row>    
   </ion-toolbar>
 </ion-header>
 
