--- a/TPLaComandaApp/src/app/pages/scanner-solicitar-mesa/scanner-solicitar-mesa.page.scss
+++ b/TPLaComandaApp/src/app/pages/scanner-solicitar-mesa/scanner-solicitar-mesa.page.scss
@@ -24,3 +24,9 @@ ion-grid{
     color: #ffffff;
     font-size: xx-large;
 }
+
+.titulo{
+    color: #3880ff;
+    margin-left: 15vw;
+    margin-right: 15vw;
+}
