--- a/TPLaComandaApp/src/app/components/splash/splash.component.html
+++ b/TPLaComandaApp/src/app/components/splash/splash.component.html
@@ -1,10 +1,7 @@
-
-<div class="titulo-pps">
-    <span>TP PPS</span><br>
-    <span>"La Comanda"</span> 
-</div>
-<div class="icono"><ion-img class="img-icon" src="/assets/img/icon-resto.png"></ion-img></div>
-<div class="apellidos">
-    <span>F. Rivara, E. Medina</span><br>
-    <span>F. Rojas</span>
+<div class="customContenedor">  
+    <ion-img class="customFondo puff-in-center" src="../../../assets/img/titulo.png"></ion-img>
+    <ion-img class="customFondoCuatro wobble-hor-top" src="../../../assets/img/icon-resto.png"></ion-img>
+    <div class="bottomContainer">
+      <ion-img class="customFondoTres slide-in-blurred-bottom " src="../../../assets/img/nombres.png"></ion-img>
+    </div>
 </div>
