Actualizado lista de clientes

--- a/TPLaComandaApp/src/app/pages/supervisar-clientes/supervisar-clientes.page.html
+++ b/TPLaComandaApp/src/app/pages/supervisar-clientes/supervisar-clientes.page.html
@@ -1,6 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Supervisor</ion-title>
+    <ion-title>
+      <strong>Supervisar clientes</strong><br>
+    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="irAtras()"
+                  color="danger">
+                  Volver
+                  <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
