--- a/TPLaComandaApp/src/app/pages/asignar-mesa/asignar-mesa.page.html
+++ b/TPLaComandaApp/src/app/pages/asignar-mesa/asignar-mesa.page.html
@@ -1,5 +1,20 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>
+      <strong>Asignar mesa</strong><br>
+    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="irAtras()"
+                  color="danger">
+                  Volver
+                  <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
-
+<h1>Lista de clientes en espera</h1>
+<!--
 <table>
   <thead>
     <tr>
@@ -18,7 +33,25 @@
   </tr>
   </tbody>
 </table>
-
+-->
+<ion-grid >
+    <ion-row class="tabla">
+      <ion-col size="6" class="celda centrar">UID</ion-col>
+      <ion-col size="6" class="centrar">NOMBRE</ion-col>
+    </ion-row>
+    <div  *ngFor="let cliente of listaClientesEspera | async">
+      <ion-row class="tabla">
+        <ion-col size="6" class="celda">{{cliente.uid}}</ion-col>
+        <ion-col size="6" class="">{{cliente.nombre}}</ion-col>
+      </ion-row>
+      <ion-row class="tabla">
+        <ion-col size="12" class="">
+          <ion-button expand="block" (click)="abrirMenu(cliente)">Asignar mesa</ion-button>
+        </ion-col>
+      </ion-row>
+    </div>
+  </ion-grid>
+<!--
 <table>
   <thead>
     <tr>
@@ -37,5 +70,5 @@
     </tr>
   </tbody>
 </table>
-
+-->
 </ion-content>
