--- a/TPLaComandaApp/src/app/pages/asignar-mesa/asignar-mesa.page.scss
+++ b/TPLaComandaApp/src/app/pages/asignar-mesa/asignar-mesa.page.scss
@@ -2,6 +2,19 @@ ion-content{
     --background: linear-gradient(30deg, #3f0693 0%, #d976ff 100%);
 }
 
+.tabla{
+    border: 1px solid white;
+}
+
+.celda{
+    border-right: 1px solid white;
+}
+
+.centrar{
+    text-align: center;
+}
+
+
 
 table {
     border-collapse: collapse;
