--- a/TPLaComandaApp/src/app/app.component.scss
+++ b/TPLaComandaApp/src/app/app.component.scss
@@ -1,3 +1,4 @@
 .fondo{
-    background-image: linear-gradient(30deg, #3f0693 0%, #d976ff 100%);
+  background-color:  #4A084A;
+  //background-image: linear-gradient(30deg, #3f0693 0%, #d976ff 100%);
   }
