--- a/TPLaComandaApp/src/app/pages/supervisar-clientes/supervisar-clientes.page.html
+++ b/TPLaComandaApp/src/app/pages/supervisar-clientes/supervisar-clientes.page.html
@@ -20,19 +20,21 @@
       <ion-col size="6" class="celda centrar">NOMBRE</ion-col>
       <ion-col size="6" class="centrar">CORREO</ion-col>
     </ion-row>
-    <div *ngFor="let cliente of listaClientes | async">
-      <ion-row class="tabla">
-        <ion-col size="6" class="celda">{{cliente.nombre}}</ion-col>
-        <ion-col size="6">{{cliente.email}}</ion-col>
-      </ion-row>
-      <ion-row class="tabla">
-        <ion-col size="6">
-          <ion-button expand="block" class="buttonEstado" color="success" (click)="cambiarEstado(cliente, 'aprobado')">Aprobar</ion-button>
-        </ion-col>
-        <ion-col size="6">
-          <ion-button expand="block" class="buttonEstado" color="danger" (click)="cambiarEstado(cliente, 'rechazado')">Rechazar</ion-button>
-        </ion-col>
-      </ion-row>
+    <div *ngIf="lista">
+      <div *ngFor="let cliente of lista">
+        <ion-row class="tabla">
+          <ion-col size="6" class="celda">{{cliente.nombre}}</ion-col>
+          <ion-col size="6">{{cliente.email}}</ion-col>
+        </ion-row>
+        <ion-row class="tabla">
+          <ion-col size="6">
+            <ion-button expand="block" class="buttonEstado" color="success" (click)="cambiarEstado(cliente, 'aprobado')">Aprobar</ion-button>
+          </ion-col>
+          <ion-col size="6">
+            <ion-button expand="block" class="buttonEstado" color="danger" (click)="cambiarEstado(cliente, 'rechazado')">Rechazar</ion-button>
+          </ion-col>
+        </ion-row>
+      </div>
     </div>
   </ion-grid>
 </ion-content>
