--- a/TPLaComandaApp/src/app/pages/registro/registro.page.html
+++ b/TPLaComandaApp/src/app/pages/registro/registro.page.html
@@ -42,7 +42,7 @@
                </ion-item>
                <ion-item class="inputForm">
                 <ion-label position="floating">Dni</ion-label>
-                  <ion-input name="dni" type="text" [(ngModel)]="dniString"></ion-input>
+                  <ion-input name="dni" type="text" [(ngModel)]="cliente.dni"></ion-input>
                </ion-item>
               </div>   
 
