--- a/TPLaComandaApp/src/app/pages/pedido-mozo-confirma-pago/pedido-mozo-confirma-pago.page.html
+++ b/TPLaComandaApp/src/app/pages/pedido-mozo-confirma-pago/pedido-mozo-confirma-pago.page.html
@@ -3,21 +3,16 @@
 <ion-content>
   <ion-card class="cardMenu">
     <ion-card-header>
-      <ion-card-title class="titleMenu">Estado de su orden</ion-card-title>
+      <ion-card-title class="titleMenu">Lista de la orden</ion-card-title>
     </ion-card-header>
   
     <ion-card-content>
       <ion-list class="listMenu">
-        <ion-item class="itemMenu" *ngFor="let item of pedido.detallePedido; let i = index">
-            <ion-col size="8">
+        <ion-item class="itemMenu" *ngFor="let item of pedidosService.pedido.detallePedido; let i = index">
+            <ion-col size="10">
               <p>{{item.conceptoNombre}}</p>
               <p>{{item.importeUnitario | currency}} X {{item.cantidad}} = <strong>{{item.importeTotal | currency}}</strong></p> 
               
-            </ion-col>
-            <ion-col size="4">
-              <p [ngStyle]="{'color': item.estado.match('Pendiente', 'Preparando') ? 'red' : 'green'}">
-                <strong>{{item.estado}}</strong>
-              </p>
             </ion-col>
         </ion-item>
       </ion-list>
@@ -26,13 +21,14 @@
 
   <ion-card>
     <ion-card-content>
-      <h1>Total: {{pedidosService.totalPedido | currency}}</h1>
+      <h1>Total: {{pedidosService.pedido.importeTotal | currency}}</h1>
     </ion-card-content>
   </ion-card>
 </ion-content>
 
 <ion-footer>
   <ion-toolbar>
-    <app-button-update-pedido-recepcion *ngIf="pedido.estado == 'Confirmar entrega'"></app-button-update-pedido-recepcion>
+    <app-button-update-mozo-confirma-pedido></app-button-update-mozo-confirma-pedido>
   </ion-toolbar>
 </ion-footer>
+
