--- a/TPLaComandaApp/src/app/pages/lista-pedidos/lista-pedidos.page.html
+++ b/TPLaComandaApp/src/app/pages/lista-pedidos/lista-pedidos.page.html
@@ -57,7 +57,7 @@
               <strong>Cliente</strong>
             </p>
             <p >
-              <strong>Estado</strong>
+              <strong>Acción</strong>
             </p>
             <p>
           </ion-item>
@@ -73,26 +73,26 @@
           </ion-item>
         </div>
         <div *ngIf="(empleadoService.tipo === 'mozo' && listaPedido == 2)">
-          <ion-item >
-            <p style="width: 12%;"><strong>Mesa</strong></p>
-            <p style="width: 100%; text-align: center">
-              <strong>Cliente</strong>
-            </p>
-            <p >
-              <strong>Estado</strong>
-            </p>
-            <p>
-          </ion-item>
-          <ion-item *ngFor="let pedido of pedidosService.pedidosAPagar" class="itemOrdenes" (click)="confirmarPago(pedido)">
-            <p style="width: 15%;"><strong>{{pedido.mesaNro}}</strong></p>
-            <p style="width: 100%; text-align: center">
-              {{pedido.usuarioNombre}}
-            </p>
-            <p [ngStyle]="{'color': 'red'}">
-              <strong>{{pedido.estado}}</strong>
-            </p>
-            <p>
-          </ion-item>
+          <ion-grid class="">
+            <ion-row>
+              <ion-col size="6" class="celda centrar borderDer titulo">
+                <p><strong>Mesas</strong></p>
+              </ion-col>
+              <ion-col size="6" class="celda centrar titulo">
+                <p><strong>Acción</strong></p>
+              </ion-col>
+            </ion-row>
+            <div  *ngFor="let mesa of listaMesas | async">
+              <ion-row *ngIf="mesa.estado == 'ocupada'" class="">
+                <ion-col size="6" class="celda centrar nombreMesa">
+                  <div>{{mesa.codigoqr}}</div>
+                </ion-col>
+                <ion-col size="6" class="celda">
+                  <ion-button expand="full" (click)="liberarMesa(mesa)">Confirmar pago</ion-button>
+                </ion-col>
+              </ion-row>
+            </div>
+          </ion-grid>
         </div>
       </ion-list>
     </ion-card-content>
