--- a/TPLaComandaApp/src/app/pages/detalle-cuenta/detalle-cuenta.page.html
+++ b/TPLaComandaApp/src/app/pages/detalle-cuenta/detalle-cuenta.page.html
@@ -7,7 +7,7 @@
     </ion-row>   
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding">
+<ion-content class="ion-padding-vertical">
   <table class="ion-text-center ion-margin-vertical">
     <thead>
       <tr style="border-bottom: groove;">
@@ -29,7 +29,7 @@
       <td class="ion-padding-vertical">Propina</td>
       <td>-</td>
       <td>-</td>
-      <td>$0</td>
+      <td>${{propina}}</td>
     </tr>
   </table>
   <ion-row class="ion-justify-content-end ion-margin-vertical"><strong style="text-decoration: underline;">TOTAL A PAGAR: ${{totalPagar}}</strong></ion-row>
