--- a/TPLaComandaApp/src/app/pages/detalle-cuenta/detalle-cuenta.page.scss
+++ b/TPLaComandaApp/src/app/pages/detalle-cuenta/detalle-cuenta.page.scss
@@ -2,6 +2,8 @@ ion-content{
     height: 100%;
     --background: linear-gradient(30deg, #02300d 0%, #139e64 100%);
     --color: white;
+    --padding-end: 1vw;
+    --padding-start: 1vw;
 }
 
 .titulo{
