Correccion de bug estado home-mesas

--- a/TPLaComandaApp/src/app/pages/scanner-mesa/scanner-mesa.page.html
+++ b/TPLaComandaApp/src/app/pages/scanner-mesa/scanner-mesa.page.html
@@ -13,7 +13,7 @@
 
   <ion-slides [options]="optionsSlide">
     <ion-slide>
-      <span class="cartel-aprobado">La mesa escaneada esta asignada a otro cliente!!</span>
+      <!-- <span class="cartel-aprobado">La mesa escaneada esta asignada a otro cliente!!</span> -->
     </ion-slide>
   </ion-slides>
 
