--- a/TPLaComandaApp/src/app/pages/encuesta/encuesta.page.scss
+++ b/TPLaComandaApp/src/app/pages/encuesta/encuesta.page.scss
@@ -5,3 +5,23 @@
     align-items: center!important;
 }
 
+.radioExpandido{
+    padding-left: 2px;
+    height: 2em;
+    width: 2em;
+}
+
+ion-item{
+    font-size: 1.2em;
+}
+
+ion-label{
+    text-align: center;
+    font-weight: bold;
+    font-family: monospace !important;
+}
+
+.buttonEnviar{
+    height: 3em;
+    font-size: 1.5em;
+}
