--- a/TPLaComandaApp/src/app/pages/home-mesas/home-mesas.page.html
+++ b/TPLaComandaApp/src/app/pages/home-mesas/home-mesas.page.html
@@ -1,4 +1,4 @@
-<app-header [urlBack]="previousurl"></app-header>
+<app-header [urlBack]="'/home'"></app-header>
 
 <ion-content [fullscreen]="true">
   <div class="card-menu">
