se agrega juego + spinner

--- a/TPLaComandaApp/src/app/pages/detalle-cuenta/detalle-cuenta.page.html
+++ b/TPLaComandaApp/src/app/pages/detalle-cuenta/detalle-cuenta.page.html
@@ -31,6 +31,12 @@
       <td>-</td>
       <td>${{propina}}</td>
     </tr>
+    <tr>
+      <td class="ion-padding-vertical">Descuento</td>
+      <td>-</td>
+      <td>-</td>
+      <td>-${{descuento}}</td>
+    </tr>
   </table>
   <ion-row class="ion-justify-content-end ion-margin-vertical"><strong style="text-decoration: underline;">TOTAL A PAGAR: ${{totalPagar}}</strong></ion-row>
   <!-- <ion-row class="ion-justify-content-end"><ion-button color="light">Pagar</ion-button></ion-row> -->
