--- a/TPLaComandaApp/src/global.scss
+++ b/TPLaComandaApp/src/global.scss
@@ -73,3 +73,36 @@
     color: #C22727;
     text-align: center;
 }
+
+.custom-loading{
+	--background: transparent;
+
+	.loading-wrapper {
+        background-image:  url("./assets/img/logo.png");
+		background-size: contain;
+		background-position: center center;
+		background-repeat: no-repeat;
+		box-shadow: none;
+        width: 40% !important;
+        height: 40% !important;
+        position: relative;
+        animation-name: mymove;
+        animation-duration: 1s;
+        animation-iteration-count: infinite;        
+	}
+}
+
+@keyframes mymove {
+    0%{
+        margin-left: 0vw;
+        // transform: rotate(359deg);
+    }
+    35%{
+        margin-right: 30vw;        
+        // transform: rotate(0deg);
+    }
+    70%{
+        margin-left: 30vw;
+        // transform: rotate(359deg);
+    }
+}
